@@ -24,7 +24,6 @@
 package de.betoffice.web.json.builder;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import de.betoffice.web.json.PartyJson;
 import de.winkler.betoffice.storage.Nickname;
@@ -37,7 +36,7 @@ import de.winkler.betoffice.storage.User;
  */
 public class PartyJsonMapper {
 
-    public PartyJson map(User user, PartyJson partyJson) {
+    public static PartyJson map(User user, PartyJson partyJson) {
         partyJson.setId(user.getId());
         partyJson.setName(user.getName());
         partyJson.setSurname(user.getSurname());
@@ -49,15 +48,15 @@ public class PartyJsonMapper {
         return partyJson;
     }
 
-    public List<PartyJson> map(List<User> users) {
-        return users.stream().map((user) -> {
-            PartyJson json = new PartyJson();
-            json = map(user, json);
-            return json;
-        }).collect(Collectors.toList());
+    public static List<PartyJson> map(List<User> users) {
+        return users.stream().map(PartyJsonMapper::map).toList();
+    }
+    
+    private static PartyJson map(User user) {
+    	return map(user, new PartyJson());
     }
 
-    public User reverse(PartyJson partyJson, User user) {
+    public static User reverse(PartyJson partyJson, User user) {
         user.setName(partyJson.getName());
         user.setSurname(partyJson.getSurname());
         user.setEmail(partyJson.getMail());
